--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,53 @@
-body {
-   font-family: sans-serif;
-}
-
 .game {
-   max-width: calc(3 * 100px);
-   margin: 0 auto;
-   text-align: center;
-   padding: 20px;
+   display: flex;
+   flex-direction: column;
+   align-items:center;
 }
 
-.status {
-   display: flex;
-   justify-content: space-between;
-   margin-bottom: 20px;
-   font-size: 20px;
+.headline {
+   font-family: 'Segoe UI';
+   color: #2c3e50;
+   text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+   letter-spacing: 1px;
 }
+
 
 .board {
    display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   justify-content: center;
+   gap: 5px;
 }
 
 .cell {
    height: 100px;
    width: 100px;
    font-size: 40px;
-   font-weight:400;
+   font-weight: 400;
    border: 2px solid #cccccc;
    cursor: pointer;
    transition: background-color 0.3s ease-in-out;
 }
 
-.cell:hover {
-   background-color: lightgreen;
+.status-footer {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-top: 10px;
+   width: 100%;
+}
+
+.game-status {
+   font-family: 'Trebuchet MS';
+   font-size: 24px;
+   color: #2c3e50;
 }
 
 .reset-button {
-   padding: 5px 10px;
+   height: 48px;
+   font-size: 14px;
+   background-color: #2c3e50;
+   color: #ffffff;
+   padding: 10px 20px;
+   border: none;
+   border-radius: 10px;
+   cursor: pointer;
 }
