--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,16 @@
    transition: background-color 0.3s ease-in-out;
 }
 
+.x-cell {
+  background-color: #5bc187;
+  color: #2c3e50;
+}
+
+.o-cell {
+  background-color: #ec7063;
+  color: #2c3e50;
+}
+
 .status-footer {
    display: flex;
    justify-content: space-between;
